@@ -23,7 +23,7 @@
 #ifndef RcppCommon_h
 #define RcppCommon_h
 
-// #define RCPP_DEBUG_LEVEL 0 
+// #define RCPP_DEBUG_LEVEL 0
 
 #include <Rcpp/platform/compiler.h>
 #include <Rcpp/config.h>
